# bio-model-skills-creator

./: .env.agent.example  .gitignore  README.md  main.py  manager.py  pyproject.toml
outputs/openrouter_smoketest_20260417_191058/: smoketest_report.json
outputs/openrouter_smoketest_20260417_191545/: smoketest_report.json
outputs/openrouter_smoketest_20260417_191700/: smoketest_report.json
outputs/pxr_activity_20260417_190421/: baseline_selection_report.json  best_plan.json  designer_report.json  final_report.json  leaderboard.json  overall_selection_report.json  retrieval_result.json  run_state.json  submission.csv  tuner_report.json  tuning_summary.json
outputs/pxr_activity_20260417_191914/: baseline_selection_report.json  best_plan.json  dataset_report.json  design_plans.json  designer_report.json  final_report.json  leaderboard.json  overall_selection_report.json  retrieval_result.json  run_state.json  submission.csv  tuner_report.json  tuning_summary.json  tuning_trials.json
outputs/pxr_activity_20260417_200000/: best_plan.json  design_plans.json  final_report.json  leaderboard.json  submission.csv  task_spec.json  tuning_summary.json  tuning_trials.json
outputs/pxr_activity_20260417_480000/: baseline_selection_report.json  best_plan.json  designer_report.json  final_report.json  leaderboard.json  overall_selection_report.json  retrieval_result.json  run_state.json  (+3 more)
scripts/: model_search.py
src/: constants.py  data_utils.py  download_pxr_data.py  exporter.py  planner.py  pxr_manager.py  runner.py  schemas.py  selector.py  task_spec_builder.py  tuner.py
(+75 files in other folders)
